ConcatIterable: Use List.of() for immutable list from varargs.